--- a/Views/Staff/FinishTicket.cshtml
+++ b/Views/Staff/FinishTicket.cshtml
@@ -29,9 +29,14 @@
 
 .content {
     background-color: white;
-    padding: 20px 30px;
+    padding: 0px 30px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     width: 100%; /* Ensures content width matches header */
+}
+
+.content .row {
+    padding: 15px 0; /* Increase top and bottom padding */
+    align-items: center; /* Keep content vertically centered */
 }
 
 </style>
@@ -70,4 +75,3 @@
         }
     </div>
 </div>
-
