--- a/Views/Staff/AdminAccountManager.cshtml
+++ b/Views/Staff/AdminAccountManager.cshtml
@@ -40,7 +40,7 @@
     <div class="header">
         <h2>ระบบจัดการบัญชี Admin</h2>
     <div class="subheader row text-center">
-        <div class="col">หมายเลข</div>
+        <div class="col">บัญชีที่</div>
         <div class="col">ชื่อบัญชี</div>
         <div class="col">ชื่อผู้ใช้งาน</div>
         <div class="col">เบอร์โทรศัพท์</div>
