--- a/Views/Staff/FinishTicket.cshtml
+++ b/Views/Staff/FinishTicket.cshtml
@@ -35,7 +35,7 @@
 }
 
 .content .row {
-    padding: 5px 0; /* Increase top and bottom padding */
+    padding: px 0; /* Increase top and bottom padding */
     align-items: center; /* Keep content vertically centered */
 }
 
