--- a/Views/Staff/AdminAccountManager.cshtml
+++ b/Views/Staff/AdminAccountManager.cshtml
@@ -53,8 +53,8 @@
         <div class="col">ชื่อผู้ใช้งาน</div>
         <div class="col">เบอร์โทรศัพท์</div>
         <div class="col">ตำแหน่ง</div>
-        <div class="col-2 d-flex justify-content-center align-items-center">-</div> <!-- Smaller column -->
-        <div class="col-1 d-flex justify-content-center align-items-center">-</div> <!-- Smaller column -->
+        <div class="col-2 d-flex justify-content-center align-items-center"></div>
+        <div class="col-1 d-flex justify-content-center align-items-center"></div>
     </div>
 
     <div class="content row">
