--- a/Views/Staff/FinishTicket.cshtml
+++ b/Views/Staff/FinishTicket.cshtml
@@ -35,7 +35,7 @@
 }
 
 .content .row {
-    padding: px 0; /* Increase top and bottom padding */
+    padding: 5px 0; /* Increase top and bottom padding */
     align-items: center; /* Keep content vertically centered */
 }
 
@@ -44,7 +44,6 @@
   padding: 10px;
   text-align: center;
     }
-
 </style>
 
 <br><br>
@@ -53,6 +52,7 @@
     int index = 1;  
     var today = DateTime.Today;
 }
+
 <div class="container mt-5">
     <div class="header">
         <h2>รายการที่ดำเนินการเรียบร้อยแล้ว</h2>
